--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="response-text" class="display-4">
             ask a question...
         </div>
-        <img src="https://picsum.photos/200" alt="" class="img-fluid mb-4" id="response-image">
+        <img src="magicBall.png" alt="" class="img-fluid mb-4" id="response-image">
         <div>
             <button onclick="shakeMagic8Ball()" class="btn btn-outline-success">
                 shake me like u mean it
