running first custom

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div id="response-text" class="display-4">
             ask a question...
         </div>
-        <img src="magicBall.png" alt="" class="img-fluid mb-4" id="response-image">
-        <div>
-            <button onclick="shakeMagic8Ball()" class="btn btn-outline-success">
+        <img src="magicBall-removebg-preview.png" alt="" class="img-fluid mb-4" id="response-image">
+        <div id="shakingBacon">
+            <button onclick="shakeMagic8Ball()" class="btn btn-outline-success ">
                 shake me like u mean it
             </button>
         </div>
